# veloq

./: .gitignore  AI_GUIDELINE.md  CLAUDE.md  Cargo.toml  README.md  README_DEV.md
.agent/rules/: guideline.md  rust-principles.md
.github/workflows/: benchmark_fs.yml  ci.yml
.zed/: settings.json
docker/: Dockerfile  entrypoint.sh
docs/src/: STATUS.md
docs/src/fs/: README.md
docs/src/runtime/: README.md
src/: runtime.rs
src/runtime/: context.rs  driver.rs  executor.rs  op.rs
src/runtime/driver/: iocp.rs  op_registry.rs  uring.rs
src/runtime/net/: tcp.rs
src/runtime/tests/: basic.rs  tcp.rs  udp.rs
veloq-bitset/: Cargo.toml
veloq-bitset/src/: lib.rs
veloq-examples/disk-bench/: Cargo.toml
veloq-examples/disk-bench/src/: main.rs
veloq-macros/: Cargo.toml
veloq-macros/src/: lib.rs
veloq-runtime/: Cargo.toml
veloq-runtime/benches/: fs_benchmark.rs
veloq-runtime/src/: context.rs  driver.rs  executor.rs  io.rs  lib.rs  macros.rs  net.rs  op.rs  runtime.rs
veloq-runtime/src/driver/: iocp.rs  op_registry.rs  uring.rs
veloq-runtime/src/fs/: file.rs  open_options.rs
veloq-runtime/src/io/: buffer.rs  driver.rs  fs.rs  op.rs
veloq-runtime/src/local/: mpsc.rs
veloq-runtime/src/net/: common.rs  tcp.rs  udp.rs
veloq-runtime/src/runtime/: blocking.rs  context.rs  (+3 more)
veloq-sync/: Cargo.toml
veloq-sync/src/: lib.rs  mpmc.rs  mpsc.rs  oneshot.rs  shim.rs
veloq-sync/tests/: loom_mpmc.rs  loom_mpsc.rs  loom_oneshot.rs  mpmc.rs  mpsc.rs  oneshot.rs
veloq-wheel/: Cargo.toml
veloq-wheel/src/: config.rs  error.rs  lib.rs  task.rs  wheel.rs
(+41 files in other folders)
