[workspace]
members = [
    "veloq-bitset",
    "veloq-runtime",
    "veloq-wheel",
    "veloq-examples/disk-bench", "veloq-sync",
]
resolver = "3"

[workspace.dependencies]
crossbeam-utils = { version = "0.8", default-features = false }
intrusive-collections = "0.10"
atomic-waker = "1.1.2"
futures-core = "0.3"
crossbeam-queue = "0.3"